--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -1,43 +1,58 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="utf-8" />
-    <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
-    <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <meta name="theme-color" content="#000000" />
-    <meta
-      name="description"
-      content="Web site created using create-react-app"
-    />
-    
-    <title>Web Gallery</title>
 
-    <!-- Custom fonts for this template-->
-    <link href="%PUBLIC_URL%/vendor/fontawesome-free/css/all.min.css" rel="stylesheet" type="text/css">
-    <link
-        href="https://fonts.googleapis.com/css?family=Nunito:200,200i,300,300i,400,400i,600,600i,700,700i,800,800i,900,900i"
-        rel="stylesheet">
-    <link href="%PUBLIC_URL%/css/sb-admin-2.min.css" rel="stylesheet" type="text/css">
-  </head>
-  <body id="page-top">
-    <noscript>You need to enable JavaScript to run this app.</noscript>
-    <div id="root"></div>
-    
+<head>
+  <meta charset="utf-8" />
+  <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <meta name="theme-color" content="#000000" />
+  <meta name="description" content="Web site created using create-react-app" />
+
+  <title>Web Gallery</title>
+
+  <!-- Custom fonts for this template-->
+  <!-- <link href="%PUBLIC_URL%/vendor/fontawesome-free/css/all.min.css" rel="stylesheet" type="text/css">
+  <link
+    href="https://fonts.googleapis.com/css?family=Nunito:200,200i,300,300i,400,400i,600,600i,700,700i,800,800i,900,900i"
+    rel="stylesheet">
+  <link href="%PUBLIC_URL%/css/sb-admin-2.min.css" rel="stylesheet" type="text/css"> -->
+
+  <!-- link pengerjaan -->
+  <link rel="stylesheet" href="%PUBLIC_URL%/vendor_pengerjaan/assets/css/app.css">
+  <link rel="stylesheet" href="%PUBLIC_URL%/vendor_pengerjaan/assets/css/theme.css">
+  <!-- end. link pengerjaan -->
+</head>
+
+<body id="page-top">
+  <noscript>You need to enable JavaScript to run this app.</noscript>
+  <div id="root"></div>
+
+  <!-- link default -->
   <!-- Bootstrap core JavaScript-->
-  <script src="%PUBLIC_URL%/vendor/jquery/jquery.min.js"></script>
-  <script src="%PUBLIC_URL%/vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
+  <!-- <script src="%PUBLIC_URL%/vendor/jquery/jquery.min.js"></script>
+  <script src="%PUBLIC_URL%/vendor/bootstrap/js/bootstrap.bundle.min.js"></script> -->
 
   <!-- Core plugin JavaScript-->
-  <script src="%PUBLIC_URL%/vendor/jquery-easing/jquery.easing.min.js"></script>
+  <!-- <script src="%PUBLIC_URL%/vendor/jquery-easing/jquery.easing.min.js"></script> -->
 
   <!-- Custom scripts for all pages-->
-  <script src="%PUBLIC_URL%/js/sb-admin-2.min.js"></script>
+  <!-- <script src="%PUBLIC_URL%/js/sb-admin-2.min.js"></script> -->
 
   <!-- Page level plugins -->
-  <script src="%PUBLIC_URL%/vendor/chart/Chart.min.js"></script>
+  <!-- <script src="%PUBLIC_URL%/vendor/chart/Chart.min.js"></script> -->
 
   <!-- Page level custom scripts -->
-  <script src="%PUBLIC_URL%/js/demo/chart-area-demo.js"></script>
-  <script src="%PUBLIC_URL%/js/demo/chart-pie-demo.js"></script>
-  </body>
+  <!-- <script src="%PUBLIC_URL%/js/demo/chart-area-demo.js"></script>
+  <script src="%PUBLIC_URL%/js/demo/chart-pie-demo.js"></script> -->
+
+  <!-- end. link default -->
+
+  <!-- link pengerjaan -->
+  <script
+    type="text/javascript"> (function () { var css = document.createElement('link'); css.href = 'https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css'; css.rel = 'stylesheet'; css.type = 'text/css'; document.getElementsByTagName('head')[0].appendChild(css); })(); </script>
+    <script src="%PUBLIC_URL%/vendor_pengerjaan/assets/js/app.js"></script>
+    <script src="%PUBLIC_URL%/vendor_pengerjaan/assets/js/theme.js"></script>
+  <!-- end. link pengerjaan -->
+</body>
+
 </html>
